--- a/cmake/stm32cubemx/CMakeLists.txt
+++ b/cmake/stm32cubemx/CMakeLists.txt
@@ -6,41 +6,42 @@ add_library(stm32cubemx INTERFACE)
 # Enable CMake support for ASM and C languages
 enable_language(C ASM)
 
-target_compile_definitions(stm32cubemx INTERFACE 
-	USE_HAL_DRIVER 
-	STM32F103xB
-    $<$<CONFIG:Debug>:DEBUG>
+target_compile_definitions(stm32cubemx INTERFACE
+        USE_HAL_DRIVER
+        STM32F103xB
+        $<$<CONFIG:Debug>:DEBUG>
 )
 
 target_include_directories(stm32cubemx INTERFACE
-    ../../Core/Inc
-    ../../Drivers/STM32F1xx_HAL_Driver/Inc
-    ../../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
-    ../../Drivers/CMSIS/Device/ST/STM32F1xx/Include
-    ../../Drivers/CMSIS/Include
+        ../../Core/Inc
+        ../../Drivers/STM32F1xx_HAL_Driver/Inc
+        ../../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
+        ../../Drivers/CMSIS/Device/ST/STM32F1xx/Include
+        ../../Drivers/CMSIS/Include
 )
 
 target_sources(stm32cubemx INTERFACE
-    ../../Core/Src/main.c
-    ../../Core/Src/stm32f1xx_it.c
-    ../../Core/Src/stm32f1xx_hal_msp.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
-    ../../Core/Src/system_stm32f1xx.c
-    ../../Core/Src/sysmem.c
-    ../../startup_stm32f103xb.s
+        ../../Core/Src/main.c
+        ../../Core/Src/stm32f1xx_it.c
+        ../../Core/Src/stm32f1xx_hal_msp.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c
+        ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
+        ../../Core/Src/system_stm32f1xx.c
+        ../../Core/Src/sysmem.c
+        ../../Core/Src/syscalls.c
+        ../../startup_stm32f103xb.s
 )
 
 target_link_directories(stm32cubemx INTERFACE
@@ -50,8 +51,8 @@ target_link_libraries(stm32cubemx INTERFACE
 )
 
 # Validate that STM32CubeMX code is compatible with C standard
-if(CMAKE_C_STANDARD LESS 11)
+if (CMAKE_C_STANDARD LESS 11)
     message(ERROR "Generated code requires C11 or higher")
-endif()
+endif ()
 
 
